tests/NormalTests/paczka1/small_fuzzy/43755055.err
Error in line 2: ulAEHwooLsM S82 49,9
Error in line 9: WxqB2pu6XT S82 77,8
Error in line 11: S914 S82 4,4
